update to 2.29.91, modify patch to build with this version
git-svn-id: file:///srv/repos/svn-packages/svn@70214 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gnome-settings-daemon/trunk/PKGBUILD
+++ b/gnome-settings-daemon/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-settings-daemon
-pkgver=2.29.90
+pkgver=2.29.91.1
 pkgrel=1
 pkgdesc="The GNOME Settings daemon"
 arch=(i686 x86_64)
@@ -15,13 +15,13 @@ install=gnome-settings-daemon.install
 url="http://www.gnome.org"
 groups=('gnome')
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.29/${pkgname}-${pkgver}.tar.bz2
-        gstreamer-volume.patch)
-sha256sums=('d0267a6ef0a276768353aaeb23197178f658cdf92d33669b9a8e6e5847e3ac0f'
-            'b0a77d17b095432b4c3858dff0ba192578d8ae92705e5b23f636268684fab516')
+        gstreamer-volume-2.29.91.patch)
+sha256sums=('ebebde7ee82b9b59a90b64cdff5a62a1a46def297249a4f2c9c8e84e574e887f'
+            'b0d2746ddab07c5b4ea6e1e577305fb1c915845c452bfc4f56f841b2607447e5')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  patch -Np1 -i "${srcdir}/gstreamer-volume.patch" || return 1
+  patch -Np1 -i "${srcdir}/gstreamer-volume-2.29.91.patch" || return 1
   libtoolize --force || return 1
   aclocal || return 1
   autoconf || return 1
