--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-control-center
-pkgver=2.29.90
+pkgver=2.29.91
 pkgrel=1
 pkgdesc="The Control Center for GNOME"
-arch=(i686 x86_64)
-depends=('metacity>=2.28.1' 'libxss' 'desktop-file-utils' 'gnome-settings-daemon>=2.29.90' 'libgnomekbd>=2.29.5' 'libcanberra>=0.21' 'sound-theme-freedesktop' 'libunique>=1.1.6' 'gnome-menus>=2.29.6' 'evolution-data-server>=2.29.90' 'librsvg>=2.26.0')
-makedepends=('gnome-doc-utils>=0.18.0' 'pkgconfig' 'intltool')
+arch=('i686' 'x86_64')
+depends=('metacity>=2.28.1' 'libxss' 'desktop-file-utils' 'gnome-settings-daemon>=2.29.91' 'libgnomekbd>=2.29.5' 'libcanberra>=0.21' 'sound-theme-freedesktop' 'libunique>=1.1.6' 'gnome-menus>=2.29.6' 'evolution-data-server>=2.29.90' 'librsvg>=2.26.0')
+makedepends=('gnome-doc-utils>=0.19.5' 'pkgconfig' 'intltool')
 url="http://www.gnome.org"
 groups=('gnome')
 replaces=('control-center')
@@ -17,7 +17,7 @@ install=gnome-control-center.install
 license=('GPL')
 options=('!libtool' '!emptydirs')
 source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.29/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('d40ae44e131cae16ab375fbe06ee263955777a17af6ad9fc9af18ebcc42dad82')
+sha256sums=('7cc914f0d28d67382158d683b8c687c57c3b16ea09e90cf2352cbb2ef6636340')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
