--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,14 +3,13 @@
 # Contributor: Dale Blount <dale@archlinux.org>
 # Contributor: Anders Bostrom <anders.bostrom@home.se>
 pkgname=thunderbird
-pkgver=3.0.1
+pkgver=3.0.2
 pkgrel=1
 pkgdesc="Standalone Mail/News reader"
 arch=('i686' 'x86_64')
 license=('MPL' 'GPL')
 url="http://www.mozilla.org/projects/thunderbird"
-depends=('gtk2>=2.18.5' 'gcc-libs>=4.4' 'libidl2>=0.8.13' 'mozilla-common' 'nss>=3.12.3' 'libxt' 'shared-mime-info'
-	 'alsa-lib>=1.0.21.a' 'dbus-glib>=0.82')
+depends=('gtk2>=2.18.5' 'gcc-libs>=4.4' 'libidl2>=0.8.13' 'mozilla-common' 'nss>=3.12.3' 'libxt' 'shared-mime-info' 'alsa-lib>=1.0.21.a' 'dbus-glib>=0.82')
 makedepends=('zip' 'pkgconfig' 'libgnomeui')
 options=('!makeflags')
 source=(ftp://ftp.mozilla.org/pub/mozilla.org/thunderbird/releases/${pkgver}/source/thunderbird-${pkgver}.source.tar.bz2
@@ -20,7 +19,7 @@ source=(ftp://ftp.mozilla.org/pub/mozilla.org/thunderbird/releases/${pkgver}/sou
         thunderbird-appversion.patch
 	thunderbird-shared-error.patch
 	libpng14.patch)
-md5sums=('f004aa5ddf2a30b5df96e06df416b0c9'
+md5sums=('db7e52c41ba5fec9428e170833e6a63f'
          'aacdcab7732af31a16cd4dc86665f4a3'
          '7a119d30341dca4eadecedd523404fdb'
          '25b6fe16ac24cd5c852213e5c1adb272'
