remove libtracker dependency
git-svn-id: file:///srv/repos/svn-packages/svn@70265 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/nautilus/trunk/PKGBUILD
+++ b/nautilus/trunk/PKGBUILD
@@ -3,11 +3,11 @@
 
 pkgname=nautilus
 pkgver=2.29.91
-pkgrel=1
+pkgrel=2
 pkgdesc="The GNOME shell and file manager"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('libbeagle>=0.3.9' 'libtracker>=0.6.95' 'libexif>=0.6.19' 'exempi>=2.1.1' 'gnome-icon-theme>=2.28.0' 'desktop-file-utils' 'gvfs>=1.5.4' 'libunique>=1.1.6' 'gnome-desktop>=2.29.91')
+depends=('libbeagle>=0.3.9' 'libexif>=0.6.19' 'exempi>=2.1.1' 'gnome-icon-theme>=2.28.0' 'desktop-file-utils' 'gvfs>=1.5.4' 'libunique>=1.1.6' 'gnome-desktop>=2.29.91')
 makedepends=('pkgconfig' 'intltool')
 replaces=('gnome-volume-manager')
 url="http://www.gnome.org"
