--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,18 +2,18 @@
 # Maintainer: Roman Kyrylych <roman@archlinux.org>
 
 pkgname=gnome-user-share
-pkgver=2.28.2
+pkgver=2.29.91
 pkgrel=1
 pkgdesc="Easy to use user-level file sharing for GNOME."
 arch=('i686' 'x86_64')
 url="http://ftp.gnome.org/pub/GNOME/sources/gnome-user-share/"
 license=('GPL')
-depends=('mod_dnssd>=0.6-3' 'gconf>=2.28.0' 'hicolor-icon-theme' 'libnotify>=0.4.5' 'gnome-bluetooth>=2.28.6' 'libcanberra>=0.21')
-makedepends=('intltool' 'gnome-doc-utils>=0.18.1')
-options=('!emptydirs')
+depends=('mod_dnssd>=0.6-3' 'gconf>=2.28.0' 'hicolor-icon-theme' 'libnotify>=0.4.5' 'gnome-bluetooth>=2.29.3' 'libcanberra>=0.21')
+makedepends=('intltool' 'gnome-doc-utils>=0.19.5' 'nautilus>=2.29.91')
+options=('!emptydirs' '!libtool')
 install=gnome-user-share.install
-source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.28/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('b3250a8fcccf9f750cfa83f06d9d89abf193df1b689e27bbc802299d6875cfd2')
+source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.29/${pkgname}-${pkgver}.tar.bz2)
+sha256sums=('478e7afc43a068dc3960c6cd3c114d336914e385ed0d21eeb4db339778605318')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
