--- a/bind/trunk/PKGBUILD
+++ b/bind/trunk/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=bind
 # Use a period and not a hyphen before the patch level for proper versioning.
 pkgver=9.6.1.P3
 _pkgver=9.6.1-P3
-pkgrel=1
+pkgrel=2
 pkgdesc="Berkeley Internet Name Domain - named server"
 arch=(i686 x86_64)
 url="https://www.isc.org/software/bind/"
@@ -43,7 +43,7 @@ build() {
   install -D -m600 ../named.logrotate ${pkgdir}/etc/logrotate.d/named
   install -D -m644 ../named.conf.d ${pkgdir}/etc/conf.d/named
   install -d -m755 ${pkgdir}/var/run/named
-  install -D -m644 COPYRIGHT $startdir/pkg/usr/share/licenses/$pkgname/LICENSE
+  install -D -m644 COPYRIGHT ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
 
   # adjust ownerships (our named user will be uid/gid 40/40)
   chmod 700 ${pkgdir}/var/named
