--- a/xorg-xdm/trunk/PKGBUILD
+++ b/xorg-xdm/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Jan de Groot <jgc@archlinux.org>
 pkgname=xorg-xdm
 pkgver=1.1.9
-pkgrel=2
+pkgrel=3
 pkgdesc="X Display Manager"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
@@ -15,16 +15,19 @@ options=('!libtool')
 source=(${url}/releases/individual/app/xdm-${pkgver}.tar.bz2
         Xsession-loginshell.patch
         Xsession-xsm.patch
+	xdm-call-early.patch
         xdm.pam)
 md5sums=('030ae4bd9b8d428749d68bfdf56ce8a5'
          '234ae568e7b22cbc09433bb396ff3d80'
          '2c30078c50bc653d72eb5114506eb313'
+	 '682570ce8a27e11fab33028b3ffd02a0'
          '419d6289ba6f851135f5c70c0e3cbec4')
 
 build() {
   cd "${srcdir}/xdm-${pkgver}"
   patch -Np0 -i "${srcdir}/Xsession-loginshell.patch" || return 1
   patch -Np1 -i "${srcdir}/Xsession-xsm.patch" || return 1
+  patch -Np1 -i "${srcdir}/xdm-call-early.patch" || return 1
   ./configure --prefix=/usr \
       --disable-xdm-auth \
       --disable-static \
