--- a/squashfs-tools/trunk/PKGBUILD
+++ b/squashfs-tools/trunk/PKGBUILD
@@ -5,19 +5,21 @@
 
 pkgname=squashfs-tools
 pkgver=4.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Tools for squashfs, a highly compressed read-only filesystem for Linux."
 url="http://squashfs.sourceforge.net"
 license=("GPL")
 arch=('i686' 'x86_64')
 depends=('zlib' 'glibc')
-source=(http://downloads.sourceforge.net/sourceforge/squashfs/squashfs$pkgver.tar.gz)
+source=(http://downloads.sourceforge.net/sourceforge/squashfs/squashfs${pkgver}.tar.gz mksquashfs-fix-race.patch)
 
 build()
 {
-    cd $startdir/src/squashfs$pkgver/$pkgname
+    cd ${srcdir}/squashfs${pkgver}/${pkgname}
+    patch < ${srcdir}/mksquashfs-fix-race.patch || return 1
     make || return 1
-    mkdir -p $startdir/pkg/sbin
-    cp -a mksquashfs unsquashfs $startdir/pkg/sbin
+    install -Dm755 mksquashfs ${pkgdir}/sbin/mksquashfs || return 1
+    install -m755 unsquashfs ${pkgdir}/sbin/unsquashfs || return 1
 }
-md5sums=('a3c23391da4ebab0ac4a75021ddabf96')
+md5sums=('a3c23391da4ebab0ac4a75021ddabf96'
+	 '39644a122e5a2cd44817ea6d24d0c8a0')
