--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -14,33 +14,34 @@ depends=('perl>=5.10.0' 'perl-net-dns' 'perl-uri' 'perl-html-parser' \
 		'perl-libwww' 'perl-io-zlib' 'perl-mail-spf' \
 		'perl-archive-tar' 'zlib' 're2c')
 makedepends=('razor' 'perl-dbi') 
-optdepends=('razor: to identify collaborately-flagged spam')
+optdepends=('razor: to identify collaborately-flagged spam'
+	    'gnupg: gpg support, without this use --nogpg flag for sa-update')
 backup=(etc/conf.d/spamd etc/mail/spamassassin/local.cf \
 	etc/mail/spamassassin/init.pre \
 	etc/mail/spamassassin/v310.pre \
 	etc/mail/spamassassin/v312.pre \
 	etc/mail/spamassassin/v320.pre)
-install=$pkgname.install
+install=${pkgname}.install
 options=(!emptydirs)
-source=(http://mirrors.devlib.org/apache/$pkgname/source/Mail-SpamAssassin-$pkgver.tar.gz \
+source=(http://mirrors.devlib.org/apache/${pkgname}/source/Mail-SpamAssassin-${pkgver}.tar.gz \
 		spamd.conf.d spamd)
 md5sums=('38078b07396c0ab92b46386bc70ef086'
          'af501c6b0bb937a2775b747cc4b6d150'
          'db5c79722722e56678401ae454b28ece')
 
 build() {
-  cd $startdir/src/Mail-SpamAssassin-$pkgver
+  cd ${srcdir}/Mail-SpamAssassin-${pkgver}
 
   # install module in vendor directories.
   PERL_MM_USE_DEFAULT=1 /usr/bin/perl Makefile.PL INSTALLDIRS=vendor \
       CONTACT_ADDRESS=root@localhost ENABLE_SSL=yes PERL_TAINT=no
   /usr/bin/make || return 1
-  /usr/bin/make DESTDIR=$startdir/pkg install || return 1
+  /usr/bin/make DESTDIR=${pkgdir} install || return 1
 
   # remove perllocal.pod and .packlist
-  find ${startdir}/pkg -name perllocal.pod -delete
-  find ${startdir}/pkg -name .packlist -delete
+  find ${pkgdir} -name perllocal.pod -delete
+  find ${pkgdir} -name .packlist -delete
 
-  /bin/install -D -m644 $startdir/src/spamd.conf.d $startdir/pkg/etc/conf.d/spamd
-  /bin/install -D -m755 $startdir/src/spamd $startdir/pkg/etc/rc.d/spamd
+  /bin/install -D -m644 ${srcdir}/spamd.conf.d ${pkgdir}/etc/conf.d/spamd
+  /bin/install -D -m755 ${srcdir}/spamd ${pkgdir}/etc/rc.d/spamd
 }
