--- a/postfix/trunk/PKGBUILD
+++ b/postfix/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Paul Mattal <paul@archlinux.org>
 pkgname=postfix
 pkgver=2.6.5
-pkgrel=3
+pkgrel=4
 pkgdesc="Secure, fast, easy to administer drop in replacement for Sendmail (MTA)"
 arch=('i686' 'x86_64')
 license=('custom')
@@ -12,17 +12,17 @@ backup=(etc/postfix/aliases etc/postfix/virtual etc/postfix/relocated \
 	etc/postfix/access etc/postfix/header_checks etc/postfix/transport \
 	etc/postfix/generic etc/postfix/canonical \
 	etc/postfix/main.cf etc/postfix/master.cf)
-install="$pkgname.install"
+install="${pkgname}.install"
 provides=('smtp-server' 'smtp-forwarder')
 replaces=('postfix-mysql' 'postfix-pgsql')
 conflicts=('postfix-mysql' 'postfix-pgsql' 'smtp-server' 'smtp-forwarder')
 url="http://www.postfix.org/"
-source=(ftp://ftp.porcupine.org/mirrors/postfix-release/official/$pkgname-$pkgver.tar.gz \
-        $pkgname.patch.bz2 \
-	$pkgname)
+source=(ftp://ftp.porcupine.org/mirrors/postfix-release/official/${pkgname}-${pkgver}.tar.gz \
+        ${pkgname}.patch.bz2 \
+	${pkgname})
 
 build() {
-	cd $startdir/src/$pkgname-$pkgver
+	cd ${srcdir}/${pkgname}-${pkgver}
 	
 	make makefiles \
 	        CCARGS="-DUSE_SASL_AUTH -I/usr/include/sasl \
@@ -35,20 +35,20 @@ build() {
 	make OPT="${CFLAGS}" || return 1
 
 	sh postfix-install -non-interactive \
-		install_root="$startdir/pkg" \
-		daemon_directory="/usr/lib/$pkgname" \
-		sample_directory="/etc/$pkgname/sample" \
+		install_root="${pkgdir}" \
+		daemon_directory="/usr/lib/${pkgname}" \
+		sample_directory="/etc/${pkgname}/sample" \
 		manpage_directory="/usr/share/man"
 
-	cd $startdir/pkg
-	cat $startdir/src/$pkgname.patch |patch -Np0 || return 1
-	rm -f etc/$pkgname/main.cf~
+	cd ${pkgdir}
+	cat ${srcdir}/${pkgname}.patch |patch -Np0 || return 1
+	rm -f etc/${pkgname}/main.cf~
 
-	cd $startdir/pkg
+	cd ${pkgdir}
 	mkdir etc/rc.d
-	install -m 0755 $startdir/src/$pkgname etc/rc.d/$pkgname
+	install -m 0755 ${srcdir}/${pkgname} etc/rc.d/${pkgname}
 
-	install -Dm644 $startdir/src/$pkgname-$pkgver/LICENSE ${startdir}/pkg/usr/share/licenses/${pkgname}/LICENSE
+	install -Dm644 ${srcdir}/${pkgname}-${pkgver}/LICENSE ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
 }
 md5sums=('6b954cfb3eb6141dac1e773281211717'
          'a3c45ff23ef036143711793fcf2478c3'
