--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -40,25 +40,25 @@ md5sums=('75c7e1770305e1f3b75c52785c137611'
 
 build()
 {
-  cd $pkgdir
+  cd ${pkgdir}
   mkdir -p bin boot dev etc home lib mnt proc root sbin tmp usr var opt srv sys
   chmod 555 proc
   mkdir -p media/{fl,cd,dvd}
   mkdir -p usr/{bin,include,lib,sbin,share/misc,src}
 
   mkdir -p usr/share/man/man{1,2,3,4,5,6,7,8}
-  ln -s man3 $pkgdir/usr/share/man/man3x
+  ln -s man3 ${pkgdir}/usr/share/man/man3x
 
   # fhs compliance
   mkdir -p usr/local/{bin,games,include,lib,man,sbin,share,src}
-  ln -s ../man $pkgdir/usr/local/share/man
+  ln -s ../man ${pkgdir}/usr/local/share/man
   mkdir -p var/{cache/man,local,lock,opt,run,spool/mail,tmp,games}
   chmod 1777 var/lock
   mkdir -p var/log/old
   mkdir -p etc/{ld.so.conf.d,skel,profile.d}
   mkdir -p lib/modules
   mkdir -p var/lib/misc
-  (cd $pkgdir/var; ln -s spool/mail mail)
+  (cd ${pkgdir}/var; ln -s spool/mail mail)
 
   # vsftpd won't run with write perms on /srv/ftp
   mkdir -p srv/ftp
@@ -71,25 +71,29 @@ build()
   chmod 0750 root
 
   #Allow setgid games to write scores:
-  chmod 775 $pkgdir/var/games
-  chown root:50 $pkgdir/var/games
+  chmod 775 ${pkgdir}/var/games
+  chown root:50 ${pkgdir}/var/games
 
-  cd $srcdir
+  cd ${srcdir}
   cp fstab crypttab group host.conf hosts issue ld.so.conf motd nsswitch.conf \
     passwd protocols resolv.conf securetty services shadow shells profile \
-    $pkgdir/etc/
-  install -m 600 $srcdir/gshadow $pkgdir/etc/gshadow
-  chmod 600 $pkgdir/etc/shadow
-  chmod 600 $pkgdir/etc/crypttab
+    ${pkgdir}/etc/
+  install -m 600 ${srcdir}/gshadow ${pkgdir}/etc/gshadow
+  chmod 600 ${pkgdir}/etc/shadow
+  chmod 600 ${pkgdir}/etc/crypttab
 
   # no version any more
-  #cat issue | sed "s/#VERSION#/$pkgver/" >$pkgdir/etc/issue
+  #cat issue | sed "s/#VERSION#/${pkgver}/" >${pkgdir}/etc/issue
 
   # re-add /etc/arch-release, some software uses it
   # to check whether arch is running
-  touch $pkgdir/etc/arch-release
+  touch ${pkgdir}/etc/arch-release
   
   # Add /etc/modprobe.d/
   install -D -m644 ${srcdir}/modprobe.d.usb-load-ehci-first \
     ${pkgdir}/etc/modprobe.d/usb-load-ehci-first.conf
+
+  # Prevent pacman from removing directory (FS#16886)
+  mkdir ${pkgdir}/var/empty
+  touch ${pkgdir}/var/empty/.keep
 }
