--- a/fakeroot/trunk/PKGBUILD
+++ b/fakeroot/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=fakeroot
 pkgver=1.14.4
-pkgrel=1
+pkgrel=2
 pkgdesc="Gives a fake root environment, useful for building packages as a non-privileged user"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -22,7 +22,15 @@ build() {
 	 --disable-static --with-ipc=sysv
 	# --with-ipc=tcp is currently broken and no option on smp systems
   make || return 1
+}
+
+package() {
+  cd ${srcdir}/$pkgname-$pkgver
   make DESTDIR=${pkgdir} install || return 1
+  
+  install -dm755 ${pkgdir}/etc/ld.so.conf.d/
+  echo '/usr/lib/libfakeroot' > ${pkgdir}/etc/ld.so.conf.d/fakeroot.conf
+  
   # install README for sysv/tcp usage
   install -Dm644 $srcdir/$pkgname-$pkgver/README $pkgdir/usr/share/doc/$pkgname/README
 }
