--- a/erlang/trunk/PKGBUILD
+++ b/erlang/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=erlang
 pkgver=R13B04
-pkgrel=1
+pkgrel=2
 pkgdesc="A small concurrent functional programming language developed by Ericsson."
 arch=(i686 x86_64)
 url="http://www.erlang.org/index.html"
@@ -21,6 +21,9 @@ build() {
   cd "$srcdir/otp_src_${pkgver/./-}"
   ERTSVERSION=$(sed -n 's/^VSN[ ]*=[ ]*\([0-9.]\)/\1/p' < erts/vsn.mk)
   ERLINTERFACEVERSION=$(sed -n 's/^EI_VSN[ ]*=[ ]*\([0-9.]\)/\1/p' < lib/erl_interface/vsn.mk)
+
+  # fix for #17001
+  sed -i 's|WX_LIBS=`$WX_CONFIG_WITH_ARGS --libs`|WX_LIBS="`$WX_CONFIG_WITH_ARGS --libs` -lGLU"|' lib/wx/configure || return 1
 
   sed -i '/SSL_DYNAMIC_ONLY=/s:no:yes:' erts/configure || return 1
 
