--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=gvfs
 pkgver=1.5.4
-pkgrel=3
+pkgrel=4
 pkgdesc="Userspace virtual filesystem implemented as a pluggable module for gio"
 arch=('i686' 'x86_64')
 license=('LGPL')
@@ -22,8 +22,10 @@ build() {
   autoreconf -fi || return 1
   ./configure --prefix=/usr --sysconfdir=/etc \
       --localstatedir=/var --disable-static \
-      --libexecdir=/usr/lib/gvfs || return 1
+      --libexecdir=/usr/lib/gvfs \
+      --with-bash-completion-dir=/etc/bash_completion.d || return 1
   make || return 1
   make DESTDIR="${pkgdir}" install || return 1
   rm -f "${pkgdir}/usr/lib/gio/modules/giomodule.cache"
 }
+
