--- a/prboom/trunk/PKGBUILD
+++ b/prboom/trunk/PKGBUILD
@@ -1,10 +1,10 @@
 # $Id$
-# Contributor: dale <dale@archlinux.org>
 # Maintainer: Thayer Williams <thayer@archlinux.org>
+# Contributor: dale <dale@archlinux.org>
 
 pkgname=prboom
 pkgver=2.5.0
-pkgrel=3
+pkgrel=4
 pkgdesc="A game engine which provides a program to play Doom levels"
 url="http://prboom.sourceforge.net/"
 license=('GPL2')
@@ -17,7 +17,7 @@ sha1sums=('f17dc6ed4e72d07b85429177b00b8709ea36f5a0' 'faf858bc03a246b7f8e939679b
 build() {
 	cd $srcdir/$pkgname-$pkgver
 	patch -p1 < ../libpng-1.4.patch || return 1
-	./configure --prefix=/usr || return 1
+	./configure --prefix=/usr --disable-i386-asm || return 1
 	sed -i "s|/games|/bin|g" $srcdir/$pkgname-$pkgver/src/Makefile || return 1
 	make || return 1
 	make DESTDIR=$pkgdir install || return 1
