--- a/mc/trunk/PKGBUILD
+++ b/mc/trunk/PKGBUILD
@@ -5,8 +5,8 @@
 # Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=mc
-pkgver=4.7.0.2
-pkgrel=3
+pkgver=4.7.0.3
+pkgrel=1
 pkgdesc="A filemanager/shell that emulates Norton Commander"
 arch=('i686' 'x86_64')
 url="http://www.ibiblio.org/mc/"
@@ -18,13 +18,11 @@ provides=('mcedit-pkgbuild-syntax')
 conflicts=('mc-utf8')
 replaces=('mc-utf8')
 options=('!emptydirs' '!makeflags')
-source=(http://www.midnight-commander.org/downloads/${pkgname}-${pkgver}.tar.bz2 \
-        mc-4.7.0.2_hotlist_syntax.patch)
-md5sums=('4618626cacd3481e39719a4571c1b5be' 'e43b3c780de82c1a70a98fc31ec5fbf9')
+source=(http://www.midnight-commander.org/downloads/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('4ad6ed6667ab2364992285712e3207ea')
 
 build() {
 	cd ${srcdir}/${pkgname}-${pkgver}
-	patch -p1 < ${srcdir}/mc-4.7.0.2_hotlist_syntax.patch || return 1
 
 	./configure \
 	    --prefix=/usr --sysconfdir=/etc --mandir=/usr/share/man \
