--- a/squid/trunk/PKGBUILD
+++ b/squid/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=squid
 pkgver=2.7.STABLE7
-pkgrel=1
+pkgrel=2
 pkgdesc="A full-featured Web proxy cache server."
 arch=(i686 x86_64)
 url="http://www.squid-cache.org"
@@ -12,7 +12,7 @@ depends=('openssl' 'pam' 'cron' 'perl')
 makedepends=('libcap>=2.16')
 license=('GPL')
 backup=(etc/squid/squid.conf etc/squid/mime.conf etc/conf.d/squid)
-install=$pkgname.install
+install=${pkgname}.install
 source=(http://www.squid-cache.org/Versions/v2/2.7/${pkgname}-${pkgver}.tar.bz2
         squid-makefiles.patch squid squid.conf.d squid.pam
         squid.cron fix-for-new-cap-headers.patch)
@@ -38,18 +38,19 @@ build() {
       --enable-basic-auth-helpers="getpwnam,YP,NCSA,SMB,MSNT,PAM,multi-domain-NTLM" \
       --enable-external-acl-helpers="ip_user,unix_group,wbinfo_group" \
       --enable-ntlm-auth-helpers="SMB,fakeauth,no_check" \
-      --enable-delay-pools --enable-arp-acl --enable-ssl \
+      --enable-delay-pools --enable-arp-acl --enable-ssl --enable-snmp \
       --enable-linux-netfilter --enable-ident-lookups \
       --enable-useragent-log --enable-cache-digests --enable-referer-log \
       --enable-async-io --enable-truncate --enable-arp-acl \
       --enable-htcp --enable-carp --enable-epoll --with-maxfd=4096
+      --with-large-files
 #some versions have build problems with both async and truncate enabled:
 #      --enable-async-io --enable-arp-acl \
 
   make || return 1
   make DESTDIR=${pkgdir} install || return 1
   rm -rf ${pkgdir}/var
-  mv ${pkgdir}/usr/bin/Run* ${startdir}/pkg/usr/lib/squid
+  mv ${pkgdir}/usr/bin/Run* ${pkgdir}/usr/lib/squid
   mkdir -p ${pkgdir}/var/cache/squid
   mkdir -p ${pkgdir}/var/log/squid
   install -D -m755 ${srcdir}/squid ${pkgdir}/etc/rc.d/squid
