--- a/x264/trunk/PKGBUILD
+++ b/x264/trunk/PKGBUILD
@@ -1,26 +1,24 @@
 # $Id$
+# Maintainer : Ionut Biru <ibiru@archlinux.org>
 # Contributor: damir <damir@archlinux.org>
-# Maintainer: Paul Mattal <paul@archlinux.org>
+# Contributor: Paul Mattal <paul@archlinux.org>
 
 pkgname=x264
 pkgver=20100207
-pkgrel=1
+pkgrel=2
 pkgdesc="free library for encoding H264/AVC video streams"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 url="http://www.videolan.org/developers/x264.html"
 license=('GPL')
-depends=('libx11')
+depends=('glibc')
 makedepends=('yasm')
 source=(ftp://ftp.videolan.org/pub/videolan/x264/snapshots/x264-snapshot-$pkgver-2245.tar.bz2)
 md5sums=('cbbbb0b5b42c727b5ae515232f6d0c72')
+
 build() {
     cd "$srcdir/$pkgname-snapshot-$pkgver-2245" || return 1
 
-    ./configure \
-      --enable-pthread \
-      --enable-visualize \
-      --enable-shared \
-      --enable-pic || return 1
+    ./configure --enable-shared  || return 1
 
     make || return 1
 
