--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -66,7 +66,7 @@ pkgname=('kdeplasma-addons-applets-bball'
          'kdeplasma-addons-wallpapers-pattern'
          'kdeplasma-addons-wallpapers-virus'
          'kdeplasma-addons-wallpapers-weather')
-pkgver=4.4.0
+pkgver=4.4.1
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -75,7 +75,7 @@ groups=('kde' 'kdeplasma-addons')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-workspace' 'libqalculate'
              'kdegraphics-libs' 'kdeedu-marble' 'eigen' 'scim' 'qwt')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-md5sums=('0a990a833a8a7c5434d158b0b18c5ad2')
+md5sums=('0a6317991fe4ba8a051a7aff9f0cb911')
 
 build() {
 	cd $srcdir
@@ -200,7 +200,9 @@ package_kdeplasma-addons-applets-kdeobservatory() {
 
 package_kdeplasma-addons-applets-kimpanel() {
 	pkgdesc='A generic input method panel for Oriental languages'
-	depends=('kdebase-workspace' 'scim')
+	depends=('kdebase-workspace')
+	optdepends=('scim: SCIM backend'
+		'fcitx: FCITX backend')
 	cd $srcdir/build/applets/kimpanel
 	make DESTDIR=$pkgdir install
 }
