--- a/bzr/trunk/PKGBUILD
+++ b/bzr/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=bzr
 pkgver=2.1.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A decentralized revision control system"
 arch=('i686' 'x86_64')
 url="http://www.bazaar-vcs.org"
@@ -19,4 +19,6 @@ build() {
 
   # bash-completion
   install -D -m644 contrib/bash/bzr ${pkgdir}/etc/bash_completion.d/bzr
+  install -D -m644 contrib/bash/bzr.simple \
+		   ${pkgdir}/etc/bash_completion.d/bzr.simple
 }
