--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=perl-file-mimeinfo
 _realname=File-MimeInfo
 pkgver=0.15
 pkgrel=1
-pkgdesc='Perl/CPAN File::MimeInfo module - Determine file type'
+pkgdesc='Perl/CPAN File::MimeInfo module - Determine file type, includes mimeopen and mimetype'
 arch=(i686 x86_64)
 license=('GPL' 'PerlArtistic')
 url="http://search.cpan.org/dist/${_realname}/"
