FS#17788, no rebuild
git-svn-id: file:///srv/repos/svn-packages/svn@70482 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/perl-file-mimeinfo/trunk/PKGBUILD
+++ b/perl-file-mimeinfo/trunk/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=perl-file-mimeinfo
 _realname=File-MimeInfo
 pkgver=0.15
 pkgrel=1
-pkgdesc='Perl/CPAN File::MimeInfo module - Determine file type'
+pkgdesc='Perl/CPAN File::MimeInfo module - Determine file type, includes mimeopen and mimetype'
 arch=(i686 x86_64)
 license=('GPL' 'PerlArtistic')
 url="http://search.cpan.org/dist/${_realname}/"
