--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=avahi
 pkgver=0.6.25
-pkgrel=2
+pkgrel=3
 pkgdesc="A multicast/unicast DNS-SD framework"
 arch=('i686' 'x86_64')
 url="http://www.avahi.org/"
@@ -21,7 +21,7 @@ conflicts=('howl' 'mdnsresponder')
 provides=('howl' 'mdnsresponder')
 replaces=('howl' 'mdnsresponder')
 options=('!libtool')
-source=(http://www.avahi.org/download/avahi-${pkgver}.tar.gz gnome-nettool.png)
+source=(http://www.avahi.org/download/avahi-${pkgver}.tar.gz gnome-nettool.png avahi-daemon-dbus.patch)
 
 build() {
   [ -z "${QTDIR}" ] && . /etc/profile.d/qt3.sh
@@ -52,9 +52,6 @@ build() {
 
   rm -rf ${MONO_SHARED_DIR}
   
-  #fix capability
-  sed -i -e 's|$DAEMON -D |modprobe capability  > /dev/null 2>\&1 ;  $DAEMON -D |' ${pkgdir}/etc/rc.d/avahi-daemon
-
   sed -i -e 's/netdev/network/g' ${pkgdir}/etc/dbus-1/system.d/avahi-dbus.conf
    
   # howl and mdnsresponder compatability
@@ -65,6 +62,10 @@ build() {
   ln -s avahi-compat-howl.pc howl.pc
   mkdir -p ${pkgdir}/usr/share/pixmaps
   install -m 644 ${srcdir}/gnome-nettool.png ${pkgdir}/usr/share/pixmaps/gnome-nettool.png
+
+  cd ${pkgdir}
+  patch -p0 < ${srcdir}/avahi-daemon-dbus.patch || return 1
 }
 md5sums=('a83155a6e29e3988f07e5eea3287b21e'
-         '42c2905307c7a5dc6ac4b75f4c3d65a3')
+         '42c2905307c7a5dc6ac4b75f4c3d65a3'
+	 '0e1f5900b56fcfa1bffddb4f233f539f')
