upgpkg: imagemagick-doc 6.6.0.0-1 Upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@70514 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/imagemagick-doc/trunk/PKGBUILD
+++ b/imagemagick-doc/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Eric Belanger <eric@archlinux.org>
 
 pkgname=imagemagick-doc
-pkgver=6.5.9.5
+pkgver=6.6.0.0
 pkgrel=1
 pkgdesc="The ImageMagick documentation (utilities manuals and libraries API)"
 arch=('any')
@@ -11,9 +11,9 @@ url="http://www.imagemagick.org/"
 license=('custom')
 depends=('imagemagick')
 options=('!makeflags')
-source=(ftp://ftp.imagemagick.org/pub/ImageMagick/ImageMagick-${pkgver%.*}-${pkgver##*.}.tar.bz2)
-md5sums=('ee8f6c42f982fe785c5df8f89e6deb91')
-sha1sums=('31e4bfcdaed0569a0352cae5aaaaee0ffaed4df8')
+source=(ftp://ftp.imagemagick.org/pub/ImageMagick/ImageMagick-${pkgver%.*}-${pkgver##*.}.tar.xz)
+md5sums=('f761490fc7120088ba6e7b6952717636')
+sha1sums=('7bfa3333a810c460950209cc9b0c86abd641ff0c')
 
 build() {
   cd "${srcdir}/ImageMagick-${pkgver%.*}-${pkgver##*.}"
