upgpkg: grml-zsh-config 0.3.79-1 upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@70523 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/grml-zsh-config/trunk/PKGBUILD
+++ b/grml-zsh-config/trunk/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=grml-zsh-config
-pkgver=0.3.78
-pkgrel=2
+pkgver=0.3.79
+pkgrel=1
 pkgdesc="grml's zsh setup"
 arch=('any')
 url='http://grml.org/zsh/'
@@ -11,15 +11,19 @@ provides=('grmlzshrc')
 depends=('zsh')
 makedepends=('txt2tags')
 source=("http://deb.grml.org/pool/main/g/grml-etc-core/grml-etc-core_${pkgver}.tar.gz")
-md5sums=('e4953afb57051016999029368faf7b7b')
+md5sums=('c8123412fc02f91638d4792e5a49f861')
 
 build() {
+	cd ${srcdir}/grml-etc-core/doc
+	make
+}
+
+package() {
 	cd ${srcdir}/grml-etc-core
 	install -D -m644 etc/skel/.zshrc ${pkgdir}/etc/skel/.zshrc
 	install -D -m644 etc/zsh/keephack ${pkgdir}/etc/zsh/keephack
 	install -D -m644 etc/zsh/zshrc ${pkgdir}/etc/zsh/zshrc
-	cd doc
-	make
-	install -D -m644 grmlzshrc.5 ${pkgdir}/usr/share/man/man5/grmlzshrc.5
+
+	install -D -m644 doc/grmlzshrc.5 ${pkgdir}/usr/share/man/man5/grmlzshrc.5
 	ln -sf grmlzshrc.5.gz ${pkgdir}/usr/share/man/man5/grml-zsh-config.5.gz
 }
