Remove obsolete or broken make options/symlinks
git-svn-id: file:///srv/repos/svn-packages/svn@70537 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/nvidia/trunk/PKGBUILD
+++ b/nvidia/trunk/PKGBUILD
@@ -23,8 +23,7 @@ build() {
 	sh NVIDIA-Linux-$ARCH-${pkgver}-pkg0.run --extract-only
 	cd NVIDIA-Linux-$ARCH-${pkgver}-pkg0
 	cd usr/src/nv/
-	ln -s Makefile.kbuild Makefile
-	make SYSSRC=/lib/modules/${_kernver}/build  SYSINCLUDE=/lib/modules/${_kernver}/build/include module || return 1
+	make SYSSRC=/lib/modules/${_kernver}/build module || return 1
 
 	mkdir -p $pkgdir/lib/modules/${_kernver}/kernel/drivers/video/
 	install -m644 nvidia.ko $pkgdir/lib/modules/${_kernver}/kernel/drivers/video/
