Added optional dependency
git-svn-id: file:///srv/repos/svn-packages/svn@70591 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -77,7 +77,8 @@ package_vlc() {
            'libshout' 'libmad' 'fribidi' 'libmpeg2' 'libmodplug'
            'avahi' 'ttf-freefont' 'libxv' 'libass' 'xdg-utils' 'libcdio')
   optdepends=('libnotify: for notification plugin' 
-              'ncurses: for ncurses interface support')
+              'ncurses: for ncurses interface support'
+              'libdvdcss: for decoding encrypted DVDs')
   options=('!libtool')
   install=vlc.install
   cd "${srcdir}/${pkgbase}-${pkgver}"
