upgpkg: libdrm 2.4.18-3 rebuild for new kernel to support KMS
git-svn-id: file:///srv/repos/svn-packages/svn@70620 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libdrm/trunk/PKGBUILD
+++ b/libdrm/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=libdrm
 pkgver=2.4.18
-pkgrel=2
+pkgrel=3
 pkgdesc="Userspace interface to kernel DRM services"
 arch=(i686 x86_64)
 license=('custom')
@@ -20,7 +20,7 @@ md5sums=('d2b5fbfd37742af7d2169f7d26ce3007'
          '298588fad4d1d6f4f746a0fabb91f09d'
          '8199a3e929dab7e4fa87dccec7bf1e54'
          'ba65e71c481b94ef0fb6c23c7f21ffa1')
-           
+       
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   patch -Np1 -i "${srcdir}/no-pthread-stubs.patch" || return 1
@@ -32,7 +32,8 @@ build() {
   autoconf || return 1
   automake || return 1
   ./configure --prefix=/usr \
-      --enable-nouveau-experimental-api \
+      --enable-intel --enable-radeon \
+      --enable-vmwgfx-experimental-api --enable-nouveau-experimental-api \
       --enable-udev || return 1
   make || return 1
   make DESTDIR="${pkgdir}" install || return 1
