clean up depedencies, move them to optdepends
git-svn-id: file:///srv/repos/svn-packages/svn@70652 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/wine/trunk/PKGBUILD
+++ b/wine/trunk/PKGBUILD
@@ -9,12 +9,10 @@ pkgdesc="A compatibility layer for running Windows programs"
 url="http://www.winehq.com"
 arch=('i686')
 license=('LGPL')
-depends=('fontconfig' 'libldap' 'libxslt' 'lcms' 'libxxf86dga' 'mesa'
-         'libxcursor' 'libxrandr' 'libxdamage' 'jack-audio-connection-kit')
-makedepends=('cups' 'sane' 'fontforge' 'flex' 'bison' 'libgphoto2' 
-             'libxinerama' 'esound' 'giflib' 'ncurses' 'libxcomposite' 'samba' \
-             'libxpm' 'libxmu' 'libxxf86vm' 'perl' 'libxml2')
-optdepends=("cups" "sane" "libgphoto2" "alsa-lib" "giflib" "libpng")
+depends=('fontconfig' 'libxxf86dga' 'mesa' 'libxcursor' 'libxrandr' 'libxdamage')
+makedepends=('cups' 'sane' 'fontforge' 'flex' 'bison' 'libgphoto2' 'libxinerama' 'esound' 'giflib'  'ncurses' 'libxcomposite' \
+	     'samba' 'libxpm' 'libxmu' 'libxxf86vm' 'perl' 'libxml2' 'jack-audio-connection-kit' 'libxslt' 'libldap' 'lcms')
+optdepends=('cups' 'sane' 'libgphoto2' 'alsa-lib' 'giflib' 'libpng' 'jack-audio-connection-kit' 'libldap' 'lcms')
 source=(http://ibiblio.org/pub/linux/system/emulators/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
 md5sums=('cbde85e50db653f54fe9da34be4a6de5')
 build() {
