upgpkg: lvm2 2.02.61-1 Upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@70661 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/lvm2/trunk/PKGBUILD
+++ b/lvm2/trunk/PKGBUILD
@@ -3,10 +3,10 @@
 
 pkgbase=lvm2
 pkgname=('lvm2' 'device-mapper')
-pkgver=2.02.60
-_pkgverdm=1.02.40
+pkgver=2.02.61
+_pkgverdm=1.02.44
 _pkgverlvm=${pkgver}
-pkgrel=3
+pkgrel=1
 arch=('i686' 'x86_64')
 url="http://sourceware.org/lvm2/"
 license=('GPL')
@@ -15,12 +15,10 @@ conflicts=('mkinitcpio<0.5.99')
 source=(ftp://sources.redhat.com/pub/lvm2/LVM2.${_pkgverlvm}.tgz
         lvm2_install
         lvm2_hook)
-md5sums=('33e0e0f4b4582d495ff619696c634b2a'
-         'f781c9f5dd4f9934952c687b73d26a18'
+md5sums=('0fdac768c78d96525d47b5a3df4c67de' 'f781c9f5dd4f9934952c687b73d26a18'\
          '95bed25bdbc2c2d8500e7a07aeff7f65')
-sha1sums=('7e5c7f28a476273fa2183f80f7c9db8783aab515'
-          '583424bb0a6f89ffe4e4ea446b912f0fedac7050'
-          '0dc0c0d620f634c4d078afdb78e3bae15ccf957b')
+sha1sums=('a699c9497db438227c552f1821281ce583b9ea5b' '583424bb0a6f89ffe4e4ea446b912f0fedac7050'\
+         '0dc0c0d620f634c4d078afdb78e3bae15ccf957b')
                                           
 build() {
   cd "${srcdir}/LVM2.${_pkgverlvm}"
