database moved in xdg home and it needs pyxdg to run
git-svn-id: file:///srv/repos/svn-packages/svn@70734 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/hamster-applet/trunk/PKGBUILD
+++ b/hamster-applet/trunk/PKGBUILD
@@ -9,7 +9,7 @@ pkgdesc="GNOME time tracking applet"
 arch=('i686' 'x86_64')
 url="http://projecthamster.wordpress.com/"
 license=('GPL')
-depends=('gnome-python>=2.28.0' 'python-pysqlite>=2.5.5' 'gnome-python-desktop>=2.29.1' 'dbus-python>=0.83.0' 'gnome-panel>=2.29.91')
+depends=('gnome-python>=2.28.0' 'python-pysqlite>=2.5.5' 'gnome-python-desktop>=2.29.1' 'dbus-python>=0.83.0' 'gnome-panel>=2.29.91' 'pyxdg>=0.19')
 makedepends=('intltool' 'gnome-doc-utils>=0.19.5')
 options=('!libtool' '!emptydirs')
 groups=('gnome-extra')
