upgpkg: lame 3.98.3-1 upstream release
git-svn-id: file:///srv/repos/svn-packages/svn@70763 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/lame/trunk/PKGBUILD
+++ b/lame/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Hugo Doria <hugo@archlinux.org>
 
 pkgname=lame
-pkgver=3.98.2
-pkgrel=3
+pkgver=3.98.3
+pkgrel=1
 pkgdesc="An MP3 encoder and graphical frame analyzer"
 arch=('i686' 'x86_64')
 url="http://lame.sourceforge.net/"
@@ -12,14 +12,15 @@ depends=('ncurses')
 makedepends=('nasm')
 license=('LGPL')
 options=('!libtool')
-source=(http://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-398-2.tar.gz \
-	03_lame-ffmpeg.diff)
-md5sums=('719dae0ee675d0c16e0e89952930ed35' '95df2ada71c3bae2110f084eae30140c')
+source=(http://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.gz)
+md5sums=('c0d510525566c7f8ed5b4bf343cb3b6d')
 
 build() {
-  cd ${srcdir}/${pkgname}-398-2
-  patch -Np1 -i ${srcdir}/03_lame-ffmpeg.diff || return 1
-  ./configure --prefix=/usr --enable-nasm --enable-shared
+  cd "${srcdir}/${pkgname}-${pkgver}"
+
+  ./configure --prefix=/usr \
+              --enable-nasm \
+              --enable-shared
   make || return 1
-  make DESTDIR=${pkgdir} install
+  make DESTDIR="${pkgdir}" install || return 1
 }
