upgpkg: kdeutils 4.4.1-1 added missing makedepends
git-svn-id: file:///srv/repos/svn-packages/svn@70960 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdeutils/trunk/PKGBUILD
+++ b/kdeutils/trunk/PKGBUILD
@@ -22,7 +22,7 @@ url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdeutils')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs' 'kdepimlibs' 'kdebase-lib'
-             'kdebase-runtime' 'kdebindings-python' 'system-config-printer-common'
+             'kdebase-workspace' 'kdebindings-python' 'system-config-printer-common'
              'libarchive' 'qimageblitz' 'kdepim-runtime')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
 md5sums=('7dd3dfd7cde8cae0d61f85dba4685dd1')
