upgpkg: kdesdk 4.4.1-1 added missing makedepends
git-svn-id: file:///srv/repos/svn-packages/svn@70967 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdesdk/trunk/PKGBUILD
+++ b/kdesdk/trunk/PKGBUILD
@@ -28,7 +28,7 @@ url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdesdk')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'kdebase-runtime' 'kdepimlibs' 'subversion'
-             'kdepim-runtime')
+             'kdepim-runtime' 'kdebindings-python')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
 md5sums=('4dc275062bb38a338e83ed8f6f4854bc')
 
