--- a/enchant/trunk/PKGBUILD
+++ b/enchant/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=enchant
 pkgver=1.5.0
-pkgrel=2
+pkgrel=3
 pkgdesc="A wrapper library for generic spell checking"
 arch=('i686' 'x86_64')
 url="http://www.abisource.com/enchant/"
@@ -16,7 +16,8 @@ md5sums=('7dfaed14e142b4a0004b770c9568ed02')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  ./configure --prefix=/usr --disable-static --disable-zemberek || return 1
+  ./configure --prefix=/usr --disable-static --disable-zemberek \
+	--disable-ispell --with-myspell-dir=/usr/share/myspell || return 1
   make || return 1
   make DESTDIR="${pkgdir}" install || return 1
 }
