upgpkg: kdeplasma-applets-networkmanagement 1098151-1 bump release
git-svn-id: file:///srv/repos/svn-packages/svn@70993 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdeplasma-applets-networkmanagement/trunk/PKGBUILD
+++ b/kdeplasma-applets-networkmanagement/trunk/PKGBUILD
@@ -3,20 +3,21 @@
 # Contributor: Jakub Schmidtke <sjakub-at-gmail.com>
 
 pkgname=kdeplasma-applets-networkmanagement
-pkgver=1073182
+pkgver=1098151
 pkgrel=1
 pkgdesc="KDE4 Network Management and plasmoid"
 arch=('i686' 'x86_64')
 url="http://plasma.kde.org/"
 license=('GPL')
-depends=('kdelibs' 'kdebase-workspace' 'networkmanager')
+depends=('kdebase-workspace' 'networkmanager')
 makedepends=('cmake' 'python' 'automoc4')
 provides=('knetworkmanagement')
 conflicts=('networkmanager-plasmoid-svn' 'kdeplasma-applets-networkmanager')
 replaces=('networkmanager-plasmoid-svn' 'kdeplasma-applets-networkmanager')
+install=${pkgname}.install
 #svn co -q svn://websvn.kde.org:443/home/kde/trunk/kdereview/networkmanagement ${pkgname}
 source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-r${pkgver}.tar.bz2")
-md5sums=('d51a5bc48d9e7f8de060ac04a2da062c')
+md5sums=('bbbe4e8803cfba294b8c5384b4dec39c')
 
 build() {
   cd ${srcdir}
