upgpkg: php 5.3.1-7 provide embed sapi; FS#18504
git-svn-id: file:///srv/repos/svn-packages/svn@71005 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/php/trunk/PKGBUILD
+++ b/php/trunk/PKGBUILD
@@ -5,6 +5,7 @@ pkgbase=php
 pkgname=('php'
          'php-cgi'
          'php-apache'
+         'php-embed'
          'php-pear'
          'php-curl'
          'php-enchant'
@@ -21,7 +22,7 @@ pkgname=('php'
          'php-tidy'
          'php-xsl')
 pkgver=5.3.1
-pkgrel=6
+pkgrel=7
 _suhosinver=${pkgver}-0.9.8
 arch=('i686' 'x86_64')
 license=('PHP')
@@ -178,6 +179,16 @@ build() {
 		${phpextensions} || return 1
 	make || return 1
 
+	# embed
+	cp -a ${srcdir}/build-php ${srcdir}/build-embed
+	cd ${srcdir}/build-embed
+	./configure --srcdir=../${pkgbase}-${pkgver} \
+		${phpconfig} \
+		--enable-embed=shared \
+		--disable-cli \
+		${phpextensions} || return 1
+	make || return 1
+
 	# pear
 	cp -a ${srcdir}/build-php ${srcdir}/build-pear
 	cd ${srcdir}/build-pear
@@ -228,6 +239,14 @@ package_php-apache() {
 
 	install -D -m755 ${srcdir}/build-apache/libs/libphp5.so ${pkgdir}/usr/lib/httpd/modules/libphp5.so
 	install -D -m644 ${srcdir}/apache.conf ${pkgdir}/etc/httpd/conf/extra/php5_module.conf
+}
+
+package_php-embed() {
+	pkgdesc='Embed SAPI for PHP'
+	depends=('php' 'pcre' 'libxml2')
+
+	install -D -m755 ${srcdir}/build-embed/libs/libphp5.so ${pkgdir}/usr/lib/libphp5.so
+	install -D -m644 ${srcdir}/${pkgbase}-${pkgver}/sapi/embed/php_embed.h ${pkgdir}/usr/include/php/sapi/embed/php_embed.h
 }
 
 package_php-pear() {
